--- a/_posts /0000-01-02-Genyn322.md
+++ b/_posts /0000-01-02-Genyn322.md
@@ -2,5 +2,5 @@
 макет: 
 название слайда: "Добро пожаловать на наш второй слайд!"
 ---
-Ваш текст 
+Пошёл на кухню ссать
 Используйте стрелку влево, чтобы вернуться назад!
